Se crea el ejecutable en telefono de la app pomodoro

--- a/ReactNative/pomodoro-app/app.json
+++ b/ReactNative/pomodoro-app/app.json
@@ -19,10 +19,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.ferdev2008.pomodoroapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "b7660ef6-dada-4698-8cae-a9f2cbea54fd"
+      }
     }
   }
 }
