--- a/Hibernate/curso-hibernate/pom.xml
+++ b/Hibernate/curso-hibernate/pom.xml
@@ -21,6 +21,12 @@
             <artifactId>hibernate-core</artifactId>
             <version>6.6.6.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>3.5.2</version>
+        </dependency>
     </dependencies>
 
 </project>
