28va clase del curso de SpringBoot. Se aprendió a usar condicionalmente los beans, asignando nombres para elegir cual usar desde los archivos de configuración

--- a/SpringBoot/curso-Spring-boot/src/main/resources/application.properties
+++ b/SpringBoot/curso-Spring-boot/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 server.servlet.context-path=/sistema/api/v1
+server.port=8080
 spring.application.name=Curso-Spring-bootApp
+
+service.products=listResourceService
