30va clase del curso de SpringBoot. Se aprendió a manejar variables de configuración con la notación Configurations y Configurationsproperties con el fin de poder usarlas para mostrar información acerca de la applición de forma organizada y simple

--- a/SpringBoot/curso-Spring-boot/src/main/resources/application.properties
+++ b/SpringBoot/curso-Spring-boot/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 server.servlet.context-path=/sistema/api/v1
 server.port=8080
-spring.application.name=Curso-Spring-bootApp
+
 
 service.products=listResourceService
+
+# Configuración personalizada de la aplicación
+app.name=Curso-Spring-bootApp
+app.version=1.0.0
+app.autor=Desarrollos Innovadores S.A.
+app.language=es
+app.country=Mexico
