--- a/Hibernate/curso-hibernate/pom.xml
+++ b/Hibernate/curso-hibernate/pom.xml
@@ -27,6 +27,14 @@
             <artifactId>mariadb-java-client</artifactId>
             <version>3.5.2</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.11.4</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
